# launchcontainersdev

./: .bashrc  .gitignore  .gitignore~  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAGNO_FC_Behav_DWI.mlx  MANIFEST.in  Makefile  README.md  config.json  config_fs.json  config_launchcontainer.json  config_preproc.json  createListOfSubjects.py  createSubSesList.py  createSymLinks.py  createSymLinks.py~  curatedNiftiList.txt  deleteEnekoCode.py  demo.py  example_config_launchcontainer.json  example_tractparams.csv  funciton_testing.py  mergeZips.py  moveSubjects.py  new_run.sh  obtainCSVtable.py  orig_subs_ses-T1.txt  orig_subs_ses-T2.txt  orig_subs_ses-all.txt  prepareMagnoCSV.m  pyproject.toml  qsub_generic.py  qsub_generic.py~  qsub_generic.sh  qsub_generic.sh~  qsub_step2_heudiconv.sh  reduceMagno.m  remove_empty_folders.py  runSingularity.sh  (+12 more)
docs/: Makefile  api.rst  conf.py  index.rst
example_configs/: config_lc.yaml  example_config.yaml  example_heudiconv_step2.sh  example_lc_config.yaml
example_configs/0.3.0/: example_config.yaml
example_configs/container_especific_example_configs/rtp-pipeline/: example_config.json  example_tractparams.htm
launchcontainers/: _version.py  check_input.py  check_input_file.py  createsymlink_anatrois.py  createsymlink_rtpreproc.py  createsymlinks.py  createsymlinks_original.py  dask_distributed.py  dask_jobqueue_testing.ipynb  dask_jobqueue_testing.py  dask_schedule_queue.py  demo.py  demo2.py  input_check.py  launchcontainers.py  must_install.txt  prepare_input.py  prepareinput.py  read_config.py  readconfig.py  requirements.txt  utils.py
qmri/: mrf_reorient.m
rtp/: _version.py
src/: launch.py
src/prepare_inputs/: prepare.py  prepare_dwi.py
(+6 files in other folders)
