[metadata]
url = https://github.com/garikoitz/launchcontainers
license = LGPL 2.1
author = launchcontainers developers
author_email = ""
maintainer = ""
maintainer_email = ""
description = ""
description-file = README.md
long_description =
    # launchcontainers
    A template repo to use for new repositories.
long_description_content_type = text/md
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.6
install_requires =
    nibabel
    nilearn
    numpy
    scipy
packages = find:
include_package_data = False

[options.extras_require]
doc =
    sphinx>=1.5.3
    sphinx_rtd_theme
tests =
    codecov
    coverage<5.0
    flake8>=3.7
    flake8-black
    flake8-isort
    pytest
    pytest-cov
dev =
    pre-commit
    versioneer
all =
    %(dev)s
    %(doc)s
    %(tests)s

[options.entry_points]
console_scripts =
    launchcontainers = launchcontainers.launchcontainers:_main

[options.package_data]
* =
    resources/*
    tests/data/*

[versioneer]
VCS = git
style = pep440
versionfile_source = launchcontainers/_version.py
versionfile_build = launchcontainers/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
exclude=*build/
ignore = E203,E402,W503
per-file-ignores =
    */__init__.py:F401

[tool:pytest]
log_cli = true
